# grpc-server

./: .gitignore  README.md
proto/: Makefile  README.md  route_guide.proto
python/: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
python/report/: index.html
python/report/html/src/: __init__.py.html  client.py.html  resources.py.html  server.py.html
python/report/html/src/commands/: __init__.py.html  client.py.html  server.py.html
python/src/: client.py  resources.py  server.py
python/src/commands/: client.py  genproto.py  server.py
python/src/proto/: route_guide_pb2.py  route_guide_pb2_grpc.py
